FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__QA_Comment__c.object
<CustomObject>
    <description>Comments for a test plan question.</description>
    <fields>
        <fullName>agf__Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>agf__QA_Answer__c</referenceTo>
        <relationshipLabel>Test Plan Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Comment_Text__c</fullName>
        <label>Comment Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Test Plan Comment</label>
    <nameField>
        <displayFormat>Comment-{000000}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plan Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>